--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <br>
     <br>
     <br>
-    <img src="./images/spooderman.jpg" id="left">
+    <img src="./images/spooderman.jpg" id="left" alt="spirderman pointing">
     <div class="right"><p>to da right</p></div>
-    <img src="./images/spooderman.jpg" id="big">
+    <img src="./images/spooderman.jpg" id="big" alt="big spiderman pointing">
   </body>
 </html>
